fix(styles): :bug: fix horizontal scroll bug

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ body {
 
 .page {
   background-color: var(--page-background);
+  overflow-x: hidden;
 }
 
 .page + .page {
